--- a/html/liensweb.html
+++ b/html/liensweb.html
@@ -20,7 +20,8 @@
     <!-- Les nouveaux éléments sont ajoutés dans cette balise -->
     <div id="contenu">
     </div>
-
+    <script src="../js/ajaxPost.js"></script>
+    <script src="../js/ajaxGet.js"></script>
     <script src="../js/liensweb.js"></script>
 </body>
 
